# graphics-final-project

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.d5e1dc0  CMakeLists.txt.user.f2bfcc6  CMakeLists.txt.user.f79aeaf  submission.md
resources/: resources.qrc
resources/shaders/: bloom_blur.frag  bloom_bright.frag  bloom_combine.frag  copy.frag  crepuscular.frag  crepuscular.vert  default.frag  default.frag.autosave  default.vert  depth.frag  depth.vert  fullscreen.vert  occlusion.frag  occlusion.vert  particle.frag  particle.vert  post.frag  terrain.frag  terrain.vert  texture.frag  texture.vert
scenefiles/: lilly.json
scenefiles/bump_tests/: bump_cone.json  bump_cube.json  bump_cyl.json  bump_sphere.json  bump_test.json  flat_bump.json  repeatUV.json  strength.json
scenefiles/custom/: bunny_test.json  my_first_scene.json  penguin.json
scenefiles/final_scene/: final_scene_fall.json  final_scene_spring.json  final_scene_summer.json  final_scene_winter.json
scenefiles/lsystems/: 3d_system.json  angle_parametric.json  basic_tree.json  bush.json  center_tree.json  center_tree_fall.json  center_tree_spring.json  center_tree_winter.json  fern.json  flower_plant.json  from_book.json  garden_fall.json  garden_spring.json  garden_summer.json  garden_winter.json  no_rotation.json  one_branch.json  one_iteration.json  one_stem.json  parametric.json  preset_bush_spring.json  preset_bush_summer.json  preset_flower_plant_fall.json  preset_flower_plant_spring.json  preset_flower_plant_summer.json  preset_tree_fall.json  preset_tree_spring.json  preset_tree_summer.json  preset_tree_winter.json  tree_bok.json
scenefiles/meshes/: Lilly.mtl
scenefiles/normal_tests/: all_3_maps.json  flat_normal.json  normal_cone.json  normal_cube.json  normal_cyl.json  normal_sphere.json  repeatUVNormal.json  strengthNormal.json
scenefiles/realtime/: directional_light_1.json
src/: main.cpp  mainwindow.cpp  mainwindow.h  particlesystem.cpp  particlesystem.h  postprocess.cpp  postprocess.h  realtime.cpp  realtime.h  settings.h
src/camera/: camera.cpp  camera.h
src/lsystem/: lsystem.cpp  lsystem.cpp.autosave  lsystem.h  plantpresets.cpp  plantpresets.h
src/realtime/: realtime.cpp  realtime.h
src/renderers/: godrayrenderer.cpp  godrayrenderer.h  lightrenderer.cpp  lightrenderer.h  scenerenderer.cpp  scenerenderer.h  screenrenderer.cpp  screenrenderer.h  shaperenderer.cpp  shaperenderer.h
src/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cylinder.cpp  Sphere.cpp  Tet.cpp  Triangle.cpp  conetesselator.cpp  cubetesselator.cpp  cylindertesselator.cpp  meshloader.cpp  meshloader.h  shapetesselator.h  spheretesselator.cpp
src/tesselation/: shapecache.cpp  shapecache.h  shapetesselation.cpp  shapetesselation.h
src/utils/: math_utils.h  objloader.cpp  objloader.h  scenedata.h  scenefilereader.cpp  scenefilereader.h  sceneparser.cpp  sceneparser.h  terraingenerator.cpp  terraingenerator.h  (+2 more)
(+7 files in other folders)
